css/dark.css
h1, h2, h3, h4, table:not(.poll):not(.rendering), label, li, figcaption, dt, p:not(.language):not(#ack), caption:not(#legend), #nav, #hy_text {
    color: white;
}
.rendering th, .rendering td:not(.overview):not(.overview_half), .PoDD, .PoDDp, .LLS, .LLSp, .EoSD, .EoSDp, .PCB, .PCBp, .PoFV, .PoFVp, .MoF, .MoFp, .GFW, .GFWp, .TD, .TDp, .DDC, .DDCp, .UM, .UMp,
.PoDDt th, .LLSt th, .EoSDt th, .PCBt th, .PoFVt th, .MoFt th, .GFWt th, .DDCt th, .tier th, .tier {
    color: black;
}
body, div:not(.dropdown):not(.dropdown_content):not(.nav_right):not(.dark_bg) {
    background-color: #202020;
}
a:link:not(.replay):not(.i):not(.dropdown_button) {
    color: #0fa7ff;
}
#replays a:link, #replay a:link {
    color: #00bfff;
}
a:active:not(.replay):not(.i):not(.dropdown_button) {
    color: red;
}
a:visited:not(.replay):not(.i):not(.dropdown_button) {
    color: #ff69b4;
}
#hy {
    background-position: -632px 0px;
}
.contents, .pofv_chara_art, table:not(.noborders), table:not(.noborders) tr, table:not(.noborders) th, table:not(.noborders) td:not(.noborders) {
    border: 1px solid #808080;
}
.Winter, .FinalA, .FinalB, .in_route {
    color: cyan;
}
.does_not_even_score {
    color: gold;
}
.barely_even_scores {
    color: #FF8C00;
}
.moderately_even_scores {
    color: #00A000;
}
.does_even_score {
    color: dodgerblue;
}
.does_even_score_well, .hrtp_route {
    color: #E768C3;
}
a:link.dropdown_button, a:visited.dropdown_button {
    color: white;
}
.dropdown_content {
    background-color: #202020;
}
.dropdown_content p a:hover, .link a:hover {
    background-color: #555;
}
.page_table {
    background-color: #333;
    border: 3px solid #aaa;
}
.dimgrey {
    color: #999999;
}
.dl_icon {
    background-image: url('../games/wr/dl_white.png');
}
.Spring {
    color: fuchsia;
}
.Summer {
    color: lime;
}
.Autumn {
    color: orange;
}
.Winter {
    color: cyan;
}
.replay {
    color: white;
}
::before {
    color: white;
}
.cs {
    border-bottom: 1px dotted white;
}
.g {
    color: lime;
}
.r {
    color: black;
}
.hellsinker th {
    background-color: #333;
}
.slowdown, .warning, .unver {
    color: #f87;
}
.general_header {
    background-color: #888;
}
#hy_link {
    color: white;
}
.foot {
    border-top: 3px solid #fff;
}
.github_icon {
    background-position: -1040px 0px;
}
.source_icon {
    background-position: -1056px 0px;
}
.thvote_icon {
    background-position: -1072px 0px;
}
.dev_instance {
    color: #ff69b4;
}

